# html-layout-parser

./: .gitignore  BUILD_ANALYSIS.md  CHANGELOG.md  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  README_ZH.md  VALIDATION_REPORT.md  build.sh  index.html  package.json  pnpm-workspace.yaml  test-import.cjs  test-import.mjs  test-node.mjs  test-package.mjs  test-worker.html  test-worker.js
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release.yml
docs/: README.md  acknowledgments.md  changelog.md  index.md  package.json
docs/.vitepress/: config.js
docs/api/: error-codes.md  index.md  parser.md  types.md
docs/examples/: README.md  batch-parallel-examples.md  batch.md  index.md  memory-management-examples.md  memory.md  node-examples.md  node.md  web-examples.md  web.md  worker-examples.md  worker.md
docs/guide/: canvas-rendering.md  chinese-typography.md  css-separation.md  css-support.md  debug-mode.md  error-handling.md  font-management.md  getting-started.md  index.md  installation.md  memory-management.md  output-modes.md  performance.md  vs-measure-text.md  vs-range-api.md  vs-svg-foreignobject.md
docs/guides/: api-reference.md  memory-management.md  performance.md  quick-start.md
docs/zh/: acknowledgments.md  changelog.md  index.md
docs/zh/api/: error-codes.md  index.md  parser.md  types.md
docs/zh/examples/: batch.md  index.md  memory.md  node.md  web.md  worker.md
docs/zh/guide/: canvas-rendering.md  chinese-typography.md  css-separation.md  css-support.md  debug-mode.md  error-handling.md  font-management.md  getting-started.md  index.md  installation.md  memory-management.md  output-modes.md  performance.md  vs-measure-text.md  vs-range-api.md  vs-svg-foreignobject.md
playground/: .gitignore  CANVAS_FONTS.md  FONT_LOADING.md  LOG_SYSTEM.md  README.md  SETUP.md  browser-fallback-test.html  copy-wasm.sh  font-compress-test.html  index.html  package.json  serve.js  test-wasm.html  vite.config.ts
playground/src/: App.vue  main.ts  style.css
playground/src/components/: ComparisonView.vue  JsonNode.vue  JsonViewer.vue  LogSaver.vue  SimplifiedComparisonView.vue
playground/src/composables/: useMultiFontParser.ts  useParser.ts
playground/src/router/: index.ts
playground/src/utils/: logger.ts
playground/src/views/: BasicDemo.vue  CssSeparationDemo.vue  HomeView.vue  MultiFontDemo.vue  OutputModesDemo.vue  WorkerDemo.vue
playground/src/workers/: render.worker.ts
playground/vite-plugins/: log-saver.ts  wasm-loader.ts
public/wasm/: html_layout_parser.cjs  html_layout_parser.mjs
scripts/: benchmark-performance.mjs  build-all.sh  build-cdn.sh  publish-all.sh  publish-first-release.sh  publish-npm.sh  update-docs-imports.sh  version-bump.sh
src/: CMakeLists.txt  debug_log.cpp  debug_log.h  error_types.h  font_metrics_cache.cpp  font_metrics_cache.h  html_layout_parser.cpp  html_layout_parser.d.ts  json_serializer.cpp  json_serializer.h  multi_font_manager.cpp  multi_font_manager.h  wasm_container.cpp  wasm_container.h
tests/: package.json  tsconfig.json  vitest.config.ts
tests/src/: advancedPerformance.test.ts  canvasRendering.test.ts  charLayout.test.ts  crossEnvironment.test.ts  cssSeparation.test.ts  debugMode.test.ts  environmentConsistency.test.ts  fontMetricsCache.test.ts  integration.test.ts  jsMemorySafety.test.ts  jsonOutput.test.ts  memoryManagement.test.ts  multiFontManagement.test.ts  performance.test.ts  wasm-loader.ts  wasm-types.ts
wasm-output/: html_layout_parser.js  html_layout_parser.wasm
